namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-app
  labels:
    project: generic-multi-app
